Add idp-basic management endpoints
